--- a/about.html
+++ b/about.html
@@ -18,16 +18,15 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 <body>
 
 <!-- Navbar -->
-<div class="w3-top">
-  <div class="w3-bar w3-orange w3-card w3-left-align w3-large">
-    <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-orange" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-    <a href="index.html" class="w3-bar-item w3-button w3-padding-large w3-orange"><img src="hb2.jpg" alt="home page" width=60px height=50px></a>
-    <a href="about.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">About us</a>
-    <a href="application.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Application</a>
-    <a href="employee.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Employee</a>
-    <a href="JobSpec.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Job spec</a>
-     <a href="course.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">HotBeans Course</a>
-  </div>
+<div class="w3-bar w3-black w3-card w3-left-align w3-large">
+    <a href="index.html" class="w3-bar-item w3-button w3-padding-large"><img src="hb2.jpg" alt="Home" width="60" height="50"></a>
+    <a href="about.html" class="w3-bar-item w3-button w3-padding-large w3-hover-white">About Us</a>
+    <a href="application.html" class="w3-bar-item w3-button w3-padding-large w3-hover-white">Application</a>
+    <a href="employee.html" class="w3-bar-item w3-button w3-padding-large w3-hover-white">Employee</a>
+    <a href="JobSpec.html" class="w3-bar-item w3-button w3-padding-large w3-hover-white">Job Spec</a>
+
+</div>
+
 
   <!-- Navbar on small screens -->
   <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium w3-large">
@@ -39,7 +38,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 </div>
 
 <!-- Header -->
-<header class="w3-container w3-red w3-center" style="padding:128px 16px">
+  <header class="w3-container w3-custom-header w3-center" style="padding:128px 16px">
   <h1 class="w3-margin w3-jumbo">About us</h1>
   <p class="w3-xlarge">HotBeans, founded in 2022, is a software development company that delivers bespoke services to customers globally. We have an expertise of over 10 years and boast of experienced and extremely skilled IT experts. HotBeans has a client list that ranges from start-ups to SME's and large enterprises</p>
 </header>
@@ -81,21 +80,22 @@ Our team's diverse set of skills allows us to take on projects of all sizes, fro
 </div>
 
 <div class="w3-container w3-black w3-center w3-opacity w3-padding-64">
-    <h1 class="w3-margin w3-xlarge">Quote of the day: live life</h1>
+    <h1 class="w3-margin w3-xlarge"></h1>
 </div>
 
-<!-- Footer -->
-<footer class="w3-container w3-padding-64 w3-center w3-opacity">  
-  <div class="w3-xlarge w3-padding-32">
-    <i class="fa fa-facebook-official w3-hover-opacity"></i>
-    <i class="fa fa-instagram w3-hover-opacity"></i>
-    <i class="fa fa-snapchat w3-hover-opacity"></i>
-    <i class="fa fa-pinterest-p w3-hover-opacity"></i>
-    <i class="fa fa-twitter w3-hover-opacity"></i>
-    <i class="fa fa-linkedin w3-hover-opacity"></i>
+  <!-- Footer -->
+  <footer class="w3-container w3-custom-gray w3-center w3-opacity w3-padding-64">  
+    <div class="w3-xlarge w3-padding-32">
+      <i class="fa fa-facebook-official w3-hover-opacity w3-custom-hover"></i>
+      <i class="fa fa-instagram w3-hover-opacity w3-custom-hover"></i>
+      <i class="fa fa-snapchat w3-hover-opacity w3-custom-hover"></i>
+      <i class="fa fa-pinterest-p w3-hover-opacity w3-custom-hover"></i>
+      <i class="fa fa-twitter w3-hover-opacity w3-custom-hover"></i>
+      <i class="fa fa-linkedin w3-hover-opacity w3-custom-hover"></i>
+
  </div>
  <p>Disclaimer: Termly Inc is not a lawyer or a law firm and does not engage in the practice of law or provide legal advice or legal representation. All information, software, services, and comments provided on the site are for informational and self-help purposes only and are not intended to be a substitute for professional legal advice. Use of this site is subject to our Terms of Use.
-Copyright © 2022 HotBeans Inc. All rights reserved. <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">Policy rights</a></p>
+Copyright © 2025 HotBeans Inc. All rights reserved. <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">Policy rights</a></p>
 </footer>
 
 <script>
@@ -108,7 +108,8 @@ function myFunction() {
     x.className = x.className.replace(" w3-show", "");
   }
 }
-</script>
 
-</body>
-</html>
+
+  </body>
+  </html>
+
