--- a/application.html
+++ b/application.html
@@ -2,82 +2,133 @@
 <html lang="en">
 <head>
 <link rel="stylesheet" href="styles.css">
-<title>W3.CSS Template</title>
+<title>Application</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato|Montserrat">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
-body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
-.w3-bar,h1,button {font-family: "Montserrat", sans-serif}
-.fa-anchor,.fa-coffee {font-size:200px}
+    body, h1, h2, h3, h4, h5, h6 {
+        font-family: "Lato", sans-serif;
+    }
+    .w3-bar, h1, button {
+        font-family: "Montserrat", sans-serif;
+    }
+    form {
+        max-width: 800px;
+        margin: 50px auto;
+        background: #ffffff;
+        padding: 30px;
+        border-radius: 10px;
+        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    }
+    form fieldset {
+        border: none;
+        margin-bottom: 20px;
+    }
+    form legend {
+        font-size: 20px;
+        font-weight: bold;
+        margin-bottom: 10px;
+        color: #333;
+    }
+    form label {
+        display: block;
+        font-size: 14px;
+        margin-bottom: 8px;
+        color: #555;
+    }
+    form input[type="text"],
+    form input[type="date"],
+    form input[type="tel"],
+    form input[type="email"],
+    form select,
+    form input[type="file"] {
+        width: 100%;
+        padding: 12px;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        font-size: 14px;
+        margin-bottom: 15px;
+        box-sizing: border-box;
+        outline: none;
+    }
+    form input[type="text"]:focus,
+    form input[type="date"]:focus,
+    form input[type="tel"]:focus,
+    form input[type="email"]:focus,
+    form select:focus,
+    form input[type="file"]:focus {
+        border-color: #4CAF50;
+        box-shadow: 0 0 5px rgba(76, 175, 80, 0.5);
+    }
+    .two-cols {
+        display: flex;
+        gap: 20px;
+    }
+    .two-cols > label {
+        flex: 1;
+    }
+    form .btns {
+        text-align: center;
+        margin-top: 20px;
+    }
+    form input[type="submit"] {
+        background-color: #4CAF50;
+        color: white;
+        padding: 12px 20px;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        font-size: 16px;
+        transition: background-color 0.3s ease;
+    }
+    form input[type="submit"]:hover {
+        background-color: #45a049;
+    }
+    form p {
+        font-size: 12px;
+        color: #888;
+        margin-top: -10px;
+    }
 </style>
 </head>
 <body>
 
 <!-- Navbar -->
-<div class="w3-top">
-  <div class="w3-bar w3-orange w3-card w3-left-align w3-large">
-    <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-red" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-    <a href="index.html" class="w3-bar-item w3-button w3-padding-large w3-orange"><img src="hb2.jpg" alt="home page" width=60px height=50px></a>
-    <a href="about.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">About us</a>
-    <a href="application.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Application</a>
-    <a href="employee.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Employee</a>
-    <a href="JobSpec.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Job spec</a>
-     <a href="course.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">HotBeans Course</a>
-  </div>
-
-  <!-- Navbar on small screens -->
-  <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium w3-large">
-    <a href="about.html" class="w3-bar-item w3-button w3-padding-large">About us</a>
-    <a href="application.html" class="w3-bar-item w3-button w3-padding-large">Application</a>
-    <a href="employee.html" class="w3-bar-item w3-button w3-padding-large">Employee</a>
-    <a href="JobSpec.html" class="w3-bar-item w3-button w3-padding-large">Job spec</a>
-  </div>
+<div class="w3-bar w3-black w3-card w3-left-align w3-large">
+    <a href="index.html" class="w3-bar-item w3-button w3-padding-large"><img src="hb2.jpg" alt="Home" width="60" height="50"></a>
+    <a href="about.html" class="w3-bar-item w3-button w3-padding-large w3-hover-white">About Us</a>
+    <a href="application.html" class="w3-bar-item w3-button w3-padding-large w3-hover-white">Application</a>
+    <a href="employee.html" class="w3-bar-item w3-button w3-padding-large w3-hover-white">Employee</a>
+    <a href="JobSpec.html" class="w3-bar-item w3-button w3-padding-large w3-hover-white">Job Spec</a>
 </div>
 
-  <!-- Navbar on small screens -->
-  <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium w3-large">
-    <a href="index.html" class="w3-bar-item w3-button w3-padding-large">Back to home </a>
-    <a href="meettheteam.html" class="w3-bar-item w3-button w3-padding-large">Meet the team</a>
-    <a href="jobspec.html" class="w3-bar-item w3-button w3-padding-large">Job Spec</a>
-    <a href="course.html" class="w3-bar-item w3-button w3-padding-large">Join a Course</a>
-  </div>
-</div>
-  
 <!-- Header -->
-<header class="w3-container w3-red w3-center" style="padding:128px 16px">
-  <h1 class="w3-margin w3-jumbo">Why not apply for us? </h1>
-  <p class="w3-xlarge">HotBeans prides in delivering efficient web services that include custom website designing, and also creating complicated web applications. We understand our client’s requirements and offer the best possible solution. HotBeans combines our business knowledge with proven methodologies and deliver our clients with very high quality and cost effective solutions for all their business needs.</p>
- 
+<header class="w3-container w3-custom-header w3-center" style="padding:128px 16px">
+  <h1 class="w3-margin w3-jumbo">Why not apply with us?</h1>
+  <p class="w3-xlarge">Join HotBeans to shape the future of web development.</p>
 </header>
 
-
-
-
-
+<!-- Application Form -->
 <form action="SEND ADDRESS" id="ft-form" method="POST" accept-charset="UTF-8" enctype="multipart/form-data">
   <fieldset>
     <legend>Job</legend>
     <label>
       Application for *
       <select name="Application for" required>
-        <option>Assistant lead web
-</option>
-        <option>Web Developing     
-</option>
-         <option>Web Designing </option>
-</option>
+        <option>Assistant Lead Web</option>
+        <option>Web Developing</option>
+        <option>Web Designing</option>
       </select>
     </label>
   </fieldset>
   <fieldset>
-    <legend>Personal data</legend>
+    <legend>Personal Data</legend>
     <div class="two-cols">
       <label>
-        First name *
+        First Name *
         <input type="text" name="First name" required>
       </label>
       <label>
@@ -91,7 +142,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
         <input type="text" name="University">
       </label>
       <label>
-        Date of birth
+        Date of Birth
         <input type="date" name="Date of birth">
       </label>
     </div>
@@ -115,56 +166,40 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
         <input type="tel" name="Phone" required>
       </label>
       <label>
-        Email address *
+        Email Address *
         <input type="email" name="Email" required>
       </label>
     </div>
   </fieldset>
   <fieldset>
-    <legend>Application documents</legend>
-    <input type="hidden" name="MAX_FILE_SIZE" value="10485760">
+    <legend>Application Documents</legend>
     <div class="two-cols">
       <label>
-        Application letter
+        Application Letter
         <input type="file" name="Application letter" accept=".doc,.docx,.pdf">
       </label>
       <label>
-        Curriculum vitae
+        Curriculum Vitae
         <input type="file" name="Curriculum vitae" accept=".doc,.docx,.pdf">
       </label>
     </div>
     <p>Possible file types: DOC, PDF. Maximum file size: 10 MB.</p>
   </fieldset>
   <div class="btns">
-    <input type="text" name="_gotcha" value="" style="display:none;">
-    <input type="submit" value="Submit application">
+    <input type="submit" value="Submit Application">
   </div>
 </form>
+
 <!-- Footer -->
-<footer class="w3-container w3-padding-64 w3-center w3-opacity">  
+<footer class="w3-container w3-padding-64 w3-center w3-opacity">
   <div class="w3-xlarge w3-padding-32">
     <i class="fa fa-facebook-official w3-hover-opacity"></i>
     <i class="fa fa-instagram w3-hover-opacity"></i>
-    <i class="fa fa-snapchat w3-hover-opacity"></i>
-    <i class="fa fa-pinterest-p w3-hover-opacity"></i>
     <i class="fa fa-twitter w3-hover-opacity"></i>
     <i class="fa fa-linkedin w3-hover-opacity"></i>
- </div>
- <p>Disclaimer: Termly Inc is not a lawyer or a law firm and does not engage in the practice of law or provide legal advice or legal representation. All information, software, services, and comments provided on the site are for informational and self-help purposes only and are not intended to be a substitute for professional legal advice. Use of this site is subject to our Terms of Use.
-Copyright © 2022 HotBeans Inc. All rights reserved.<a href="https://www.w3schools.com/w3css/default.asp" target="_blank">Policy rights</a></p>
+  </div>
+  <p>Copyright © 2025 HotBeans Inc. All rights reserved.</p>
 </footer>
-
-<script>
-// Used to toggle the menu on small screens when clicking on the menu button
-function myFunction() {
-  var x = document.getElementById("navDemo");
-  if (x.className.indexOf("w3-show") == -1) {
-    x.className += " w3-show";
-  } else {
-    x.className = x.className.replace(" w3-show", "");
-  }
-}
-</script>
 
 </body>
 </html>
