--- a/employee.html
+++ b/employee.html
@@ -18,16 +18,15 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 <body>
 
 <!-- Navbar -->
-<div class="w3-top">
-  <div class="w3-bar w3-orange w3-card w3-left-align w3-large">
-    <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-red" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-    <a href="index.html" class="w3-bar-item w3-button w3-padding-large w3-orange"><img src="hb2.jpg" alt="home page" width=60px height=50px></a>
-    <a href="about.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">About us</a>
-    <a href="application.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Application</a>
-    <a href="employee.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Employee</a>
-    <a href="JobSpec.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Job spec</a>
-     <a href="course.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">HotBeans Course</a>
-  </div>
+<div class="w3-bar w3-black w3-card w3-left-align w3-large">
+    <a href="index.html" class="w3-bar-item w3-button w3-padding-large"><img src="hb2.jpg" alt="Home" width="60" height="50"></a>
+    <a href="about.html" class="w3-bar-item w3-button w3-padding-large w3-hover-white">About Us</a>
+    <a href="application.html" class="w3-bar-item w3-button w3-padding-large w3-hover-white">Application</a>
+    <a href="employee.html" class="w3-bar-item w3-button w3-padding-large w3-hover-white">Employee</a>
+    <a href="JobSpec.html" class="w3-bar-item w3-button w3-padding-large w3-hover-white">Job Spec</a>
+
+</div>
+
 
   <!-- Navbar on small screens -->
   <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium w3-large">
@@ -37,20 +36,23 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
     <a href="JobSpec.html" class="w3-bar-item w3-button w3-padding-large">Job spec</a>
   </div>
 </div>
+
 <!-- Header -->
-<header class="w3-container w3-red w3-center" style="padding:128px 16px">
-  <h1 class="w3-margin w3-jumbo">Our workers</h1>
-  <p class="w3-xlarge">Three qualfied web developers</p>
+  <header class="w3-container w3-custom-header w3-center" style="padding:128px 16px">
+  <h1 class="w3-margin w3-jumbo">Our Employees!</h1>
+  <p class="w3-xlarge">
+  Our team at Hotbeans is made up of dedicated, talented individuals who are passionate about Web Design and Development. With a diverse range of skills and expertise, we work together to drive innovation and achieve success. Each team member brings their unique strengths, and together, we create a collaborative and dynamic environment. We’re proud of the work we do and excited for what we’ll accomplish in the future!
+</p>
 </header>
 
 <!-- First Grid -->
 <div class="w3-row-padding w3-padding-64 w3-container">
   <div class="w3-content">
     <div class="w3-twothird">
-      <h1>Jaysyln Mavrick</h1>
-      <h5 class="w3-padding-32">CEO, the owner and founder of hotbeans. He discuss clients' requirements and proposed solutions with a senior developer, he highly makes sure of every role within the business.</h5>
-      
-      <p class="w3-text-grey">For via contact details please foward to JJmavrick22@gmail.com or HotBeans@gmail.com or whatsapp contact of hot beans +44556022282</p>
+      <h1>Marsh Lewis</h1>
+      <h5 class="w3-padding-32">Marsh leads as a Senior the web development team, leveraging his expertise in both front-end and back-end technologies. He ensures efficient project execution, provides technical guidance, and fosters collaboration to deliver high-quality web solutions aligned with the organisation’s goals.</h5>
+
+      <p class="w3-text-grey">Contact: MLewish12@hotmail.com</p>
     </div>
 
     <div class="w3-third w3-center">
@@ -67,42 +69,48 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
     </div>
 
     <div class="w3-twothird">
-      <h1>Alyn mett</h1>
-      <h5 class="w3-padding-32">She is a gradute on master web develpment and as high quality work with outstnding strict requirements with working times. She also is in charge of job roles as being the manager of the business.</h5>
+      <h1>Jenna Tyke</h1>
+      <h5 class="w3-padding-32">Jenna is the Web Development Manager who does the planning, execution, and completion of projects, ensuring that teams meet goals and deadlines. They also coordinate resources, communicate with stakeholders, and provide leadership to foster collaboration and drive team performance.</h5>
 
-      <p class="w3-text-grey">For via contact details please foward to Alynmm1@gmail.com or HotBeans@gmail.com or whatsapp contact of hot beans +44556022282</p>
+      <p class="w3-text-grey">Contact: Jenna001@hotmal.com.</p>
     </div>
   </div>
 </div>
 
-<!-- First Grid -->
-<div class="w3-row-padding w3-padding-64 w3-container">
-  <div class="w3-content">
-    <div class="w3-twothird">
-      <h1>Mayer Smith</h1>
-      <h5 class="w3-padding-32">He's in role with all the course making and responsible with all the customer needs and service with being the manger of making sure of the contacting details being responded and making sure that all customers get a good service.</h5>
+  <div class="w3-row-padding w3-padding-64 w3-container">
+    <div class="w3-content">
+      <div class="w3-twothird">
+        <h1>Aran Quews</h1>
+        <h5 class="w3-padding-32">Aran is the Chief Technology Officer (CTO) he is responsible for the company’s technological direction, overseeing all technical teams, including web development.
 
-      <p class="w3-text-grey">For via contact details please foward to MayerSmith11@gmail.com or HotBeans@gmail.com or whatsapp contact of hot beans +44556022282</p>
-    </div>
+</h5>
 
-    <div class="w3-third w3-center">
-      <img src="male.jpg" alt="male" style="width:100%" class="w3-circle w3-hover-opacity">
+        <p class="w3-text-grey">Contact: AaranQ1@hotmail.com</p>
+      </div>
+
+      <div class="w3-third w3-center">
+        <img src="male.jpg" alt="male" style="width:100%" class="w3-circle w3-hover-opacity">
+      </div>
     </div>
   </div>
+
+<div class="w3-container w3-black w3-center w3-opacity w3-padding-64">
+    <h1 class="w3-margin w3-xlarge"></h1>
 </div>
 
-<!-- Footer -->
-<footer class="w3-container w3-padding-64 w3-center w3-opacity">  
-  <div class="w3-xlarge w3-padding-32">
-    <i class="fa fa-facebook-official w3-hover-opacity"></i>
-    <i class="fa fa-instagram w3-hover-opacity"></i>
-    <i class="fa fa-snapchat w3-hover-opacity"></i>
-    <i class="fa fa-pinterest-p w3-hover-opacity"></i>
-    <i class="fa fa-twitter w3-hover-opacity"></i>
-    <i class="fa fa-linkedin w3-hover-opacity"></i>
+  <!-- Footer -->
+  <footer class="w3-container w3-custom-gray w3-center w3-opacity w3-padding-64">  
+    <div class="w3-xlarge w3-padding-32">
+      <i class="fa fa-facebook-official w3-hover-opacity w3-custom-hover"></i>
+      <i class="fa fa-instagram w3-hover-opacity w3-custom-hover"></i>
+      <i class="fa fa-snapchat w3-hover-opacity w3-custom-hover"></i>
+      <i class="fa fa-pinterest-p w3-hover-opacity w3-custom-hover"></i>
+      <i class="fa fa-twitter w3-hover-opacity w3-custom-hover"></i>
+      <i class="fa fa-linkedin w3-hover-opacity w3-custom-hover"></i>
+
  </div>
  <p>Disclaimer: Termly Inc is not a lawyer or a law firm and does not engage in the practice of law or provide legal advice or legal representation. All information, software, services, and comments provided on the site are for informational and self-help purposes only and are not intended to be a substitute for professional legal advice. Use of this site is subject to our Terms of Use.
-Copyright © 2022 HotBeans Inc. All rights reserved.<a href="https://www.w3schools.com/w3css/default.asp" target="_blank">Policy rights</a></p>
+Copyright © 2022 HotBeans Inc. All rights reserved. <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">Policy rights</a></p>
 </footer>
 
 <script>
@@ -119,3 +127,5 @@ function myFunction() {
 
 </body>
 </html>
+
+
