--- a/home.html
+++ b/home.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<script src="script.js" defer></script>
+<link rel="stylesheet" href="styles.css">
 <title>W3.CSS Template</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="styles.css">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
@@ -13,30 +14,93 @@
 body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 .w3-bar,h1,button {font-family: "Montserrat", sans-serif}
 .fa-anchor,.fa-coffee {font-size:200px}
+.back-to-top {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  display: none;
+  z-index: 99;
+  background-color: #000;
+  color: white;
+  border: none;
+  padding: 10px 15px;
+  border-radius: 50%;
+  cursor: pointer;
+}
+.back-to-top:hover {
+  background-color: #555;
+}
 </style>
+<script src="script.js" defer></script>
 </head>
 <body>
 
 <!-- Navbar -->
-<div class="w3-top">
-  <img src="hb.jpg" alt="hb.jpg" style="width:5ch" class="w3-circle w3-hover-opacity">
+<div class="w3-bar w3-black w3-card w3-left-align w3-large">
+    <a href="index.html" class="w3-bar-item w3-button w3-padding-large"><img src="hb2.jpg" alt="Home" width="60" height="50"></a>
+    <a href="about.html" class="w3-bar-item w3-button w3-padding-large w3-hover-white">About Us</a>
+    <a href="application.html" class="w3-bar-item w3-button w3-padding-large w3-hover-white">Application</a>
+    <a href="employee.html" class="w3-bar-item w3-button w3-padding-large w3-hover-white">Employee</a>
+    <a href="JobSpec.html" class="w3-bar-item w3-button w3-padding-large w3-hover-white">Job Spec</a>
 </div>
-  <div class="w3-bar w3-black w3-card w3-left-align w3-large">
-    <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-black" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-    <a href="index.html" class="w3-bar-item w3-button w3-padding-large w3-white">Home</a>
-    <a href="about.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">About us</a>
-    <a href="application.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Application</a>
-    <a href="employee.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Employee</a>
-    <a href="JobSpec.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Job spec</a>
-     <a href="course.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">HotBeans Course</a>
-  </div>
 
-  <!-- Navbar on small screens -->
-  <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium w3-large">
+<!-- Navbar on small screens -->
+<div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium w3-large">
     <a href="about.html" class="w3-bar-item w3-button w3-padding-large">About us</a>
     <a href="application.html" class="w3-bar-item w3-button w3-padding-large">Application</a>
     <a href="employee.html" class="w3-bar-item w3-button w3-padding-large">Employee</a>
     <a href="JobSpec.html" class="w3-bar-item w3-button w3-padding-large">Job spec</a>
-    <a href="course.html" class="w3-bar-item w3-button w3-padding-large">HotBeans Course</a>
+</div>
+
+<!-- Header -->
+<header class="w3-container w3-custom-header w3-center" style="padding:128px 16px">
+  <h1 class="w3-margin w3-jumbo">About us</h1>
+  <p class="w3-xlarge">HotBeans, founded in 2022, is a software development company that delivers bespoke services to customers globally.</p>
+</header>
+
+<!-- First Grid -->
+<div class="w3-row-padding w3-padding-64 w3-container">
+  <div class="w3-content">
+    <div class="w3-twothird">
+      <h1>Nice to meet you!</h1>
+      <h5 class="w3-padding-32">At our web development company, we are a team of passionate and experienced developers...</h5>
+      <p class="w3-text-grey">We understand that every business is unique, which is why we take a personalized approach...</p>
+    </div>
+    <div class="w3-third w3-center">
+      <img src="au.png" alt="male" style="width:100%" class="w3-circle w3-hover-opacity">
+    </div>
   </div>
 </div>
+
+<!-- Second Grid -->
+<div class="w3-row-padding w3-light-grey w3-padding-64 w3-container">
+  <div class="w3-content">
+    <div class="w3-third w3-center">
+      <img src="os.webp" alt="male" style="width:100%" class="w3-circle w3-hover-opacity">
+    </div>
+    <div class="w3-twothird">
+      <h1>Our service</h1>
+      <h5 class="w3-padding-32">We understand the importance of security and scalability in web development...</h5>
+      <p class="w3-text-grey">We are committed to delivering outstanding results and exceptional customer service.</p>
+    </div>
+  </div>
+</div>
+
+<!-- Back to Top Button -->
+<button class="back-to-top" id="backToTopBtn" title="Back to top"><i class="fa fa-arrow-up"></i></button>
+
+<!-- Footer -->
+<footer class="w3-container w3-custom-gray w3-center w3-opacity w3-padding-64">  
+    <div class="w3-xlarge w3-padding-32">
+      <i class="fa fa-facebook-official w3-hover-opacity"></i>
+      <i class="fa fa-instagram w3-hover-opacity"></i>
+      <i class="fa fa-snapchat w3-hover-opacity"></i>
+      <i class="fa fa-pinterest-p w3-hover-opacity"></i>
+      <i class="fa fa-twitter w3-hover-opacity"></i>
+      <i class="fa fa-linkedin w3-hover-opacity"></i>
+    </div>
+    <p>Copyright © 2025 HotBeans Inc. All rights reserved.</p>
+</footer>
+
+</body>
+</html>
